--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h1 class="heroe__titulo">Hola, bienvenidx a mi portafolio</h1>
                 <p class="heroe__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam repellat quos at commodi placeat maxime accusamus eaque ea quia id quo facilis ad vitae, dolor veritatis aspernatur sit itaque nesciunt!</p>
                 <div class="heroe__botones">
-                    <a href="https://drive.google.com/uc?id=1GgHiintItYKKfh-4vkmpsKQTuVZmp7dl&export=download" class="boton boton--rojo"">Descargar CV</a>
+                    <a class="boton boton--rojo">Descargar CV</a>
                     <a href="#formulario" class="boton boton--blanco">Contactame </a>
                 </div>
             </div>
@@ -46,7 +46,7 @@
             </div>
         </section>
         
-        <form class="formulario" method="post" action="sendbyemail.php" id="formulario">
+        <form class="formulario">
             <h2 class="formulario__titulo">Contacto</h2>
             <input class="formulario__asunto" name = "email" type="text" placeholder="Email">
             <input class="formulario__asunto" name = "subject" type="text" placeholder="Asunto">
